 - First meeting.
 - Perform. Approach at dawn or dusk (6-8, 18-20) and listen to her music.
 - Quest to get a violin for her from Rigard.
 - Talk.
 - Music.
 - Play (flirt).
* Maria is added to the Outlaws' camp too, but only for the express reason of enabling Cveta's content.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3s
------------
* Fixed a bug in the save format.
* You can no longer get into Rigard by mistake (before you have a pass) through the brothel announcer event.
* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). Final scene:
 - Fuck him.
* Added a new area, the King's road, reachable from the main gates of Rigard. Not much here yet.
* The hypnotist job has been added (unlocked from Jeanne). The PC and Kiai can use it.
* Roa has been added to the Shadow Lady. The vast majority of him is written by QB and LD. He currently has two scenes:
 - Fuck him (available for all genders)
 - Get fucked (only for PCs with vags)
* Terry has a new sex scene: Catch anal, written by QB and LD.

Version 0.3r
------------
* New patreon sponsored content by Del:
 - Kingdom patrol/Bandit encounter on the plains.
 - Meeting a desert caravan.
 - Hitching a ride to Rigard (short, at random).
* New patreon sponsored content by LonelyRonin - Naga win scenes:
 - Get fucked (requires vag).
 - Tailpeg (as part of get fucked).
* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). There's two scenes available:
 - Blowjob.
 - Get fucked.
* It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).
* New TF items added to Rosalin:
 - Avia. Ingredients can be bought from Patchwork.
 - Ovis. Ingredients are a bit hard to get without debug atm.
* New TF items added to Jeanne:
 - Fertilium.
 - Virilium.