@@ -9,7 +9,7 @@ VERSION_MINOR = 3;
 VERSION_SUBSCRIPT = "s";
 VERSION_NAME = "Roa";
 
-SAVE_VERSION = 19;
+SAVE_VERSION = 20;
 // Save version 1: Initial
 // Save version 2: Added inventory
 // Save version 3: Fixed clitcock restoration + height, weigth
@@ -29,6 +29,7 @@ SAVE_VERSION = 19;
 // Save version 17: Terry gender fix
 // Save version 18: Terry & Miranda exp to level fix
 // Save version 19: Terry & Miranda exp to level fix
+// Save version 20: Boss drops
 
 
 VERSION_STRING = APP_NAME + " " + VERSION_MAJOR + "." + VERSION_MINOR + VERSION_SUBSCRIPT + ": " + VERSION_NAME;
