@@ -29,6 +29,7 @@ Version 0.3t
  - Music.
  - Play (flirt).
 * Maria is added to the Outlaws' camp too, but only for the express reason of enabling Cveta's content.
+* A number of new items have been implemented as drops for the various bosses in the game. If you've already beaten Golem/Orchid, their drops will be added to your inventory.
 
 --------------------------------------------
              PREVIOUS VERSIONS
